fixed font size issues on IE and IE warn

--- a/frontend/scss/components/_layout.scss
+++ b/frontend/scss/components/_layout.scss
@@ -62,7 +62,7 @@ main.full-height {
 
     a,
     button {
-        font-size    : initial;
+        font-size    : 1rem;
         margin       : 0.4rem -1px 0.4rem 0;
         border-radius: 0;
         min-width    : 75px;
